# uit_sandpiles

./: .gitignore  CMakeLists.txt  Profile.prof  README.md  VisualizeSandpileStatistics.ipynb  analysis.py  config.yml  definitions.py  ex_config.yml  graph_coeffs.py  graphs.py  in_map.txt  lite_graphs.py  out_map.txt  output.txt  prof.py  requirements.txt  sandpiles.py  setup.py  test.txt  testm.txt  testrun.py  world.py  world.pyx
results/prange_5e-6/: 0.f  0.q  0.t  1.f  1.q  1.t  10.f  10.q  10.t  11.f  11.q  11.t  12.f  12.q  12.t  13.f  13.q  13.t  14.f  14.q  14.t  15.f  15.q  15.t  16.f  16.q  16.t  17.f  17.q  17.t  18.f  18.q  18.t  19.f  19.q  19.t  2.f  2.q  2.t  3.f  (+25 more)
sandpilesCpp/: BTWModel.cpp  BTWModel.h  CMakeLists.txt  Simulator.cpp  main.cpp
src/: BTW3dModel.cpp  BTW3dModel.h  BTWModel.cpp  BTWModel.h  CMakeLists.txt  ForestFireModel.cpp  ForestFireModel.h  ModelUtils.cpp  ModelUtils.h  Simulator.cpp
src/dynamics/: BTWClassicalDynamics.cpp  DynamicsFactory.cpp  ModelDynamics.h
test/: BTWModelTest.cpp  CMakeLists.txt  ForestFireModelTest.cpp  btwsim_tst
test/tests/: BTWModelTest.cpp  CMakeLists.txt  btwsim_tst
